--- a/WebApplication3/appsettings.json
+++ b/WebApplication3/appsettings.json
@@ -5,6 +5,12 @@
   //    "Microsoft.AspNetCore": "Warning"
   //  }
   //},
+  "Token": {
+    "SecretKey": "secretkeykfjhgkdhdfksksdsdkslkkdkdkkkkkk",
+    "Audience": "https://localhost:7064",
+    "Issuer": "https://localhost:7064",
+    "RefreshTokenExpirationDate": 30
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=YeniDatabase;TrustServerCertificate=True;Trusted_Connection=True;"
