--- a/WebApplication3/appsettings.json
+++ b/WebApplication3/appsettings.json
@@ -7,6 +7,7 @@
   //},
   "Token": {
     "SecretKey": "secretkeykfjhgkdhdfksksdsdkslkkdkdkkkkkk",
+    "RefreshTokenSecret": "thisIsRefreshTokenSecretKey",
     "Audience": "https://localhost:7064",
     "Issuer": "https://localhost:7064",
     "RefreshTokenExpirationDate": 30
